--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Windows-itpro-docs
 description: This is used for contributions to the Windows 10 TechNet content for IT professionals.
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-merlot
 
 gems:
   - jekyll-mentions
